fix(styles): codeblocks collapsed to a single line + feat(styles): scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,27 @@ body {
   font-size:.71rem !important;
   overflow-x:auto;
   line-height:1.72;
+
+  white-space: pre !important;
+  max-height: 400px;
+  overflow-x: auto;
+  overflow-y: auto;
+  line-height: 1.72;
+}
+
+.article pre code::-webkit-scrollbar { 
+  width: 6px; 
+  height: 6px; 
+}
+.article pre code::-webkit-scrollbar-track { 
+  background: var(--surface2); 
+}
+.article pre code::-webkit-scrollbar-thumb { 
+  background: var(--border2); 
+  border-radius: 3px; 
+}
+.article pre code::-webkit-scrollbar-thumb:hover { 
+  background: var(--accent); 
 }
 
 /* codeblocks_wrapper */
